syntax = "proto3";

package domain.v1;
option go_package = "internal/domain/pb";

import "google/protobuf/empty.proto";
import "domain/v1/source_model.proto";
import "domain/v1/common_model.proto";

service SourceService {
  rpc CreateSource(CreateSourceRequest) returns (Source) {};
  rpc GetSource(GetSourceRequest) returns (Source) {};
  rpc GetSourceIDs(GetSourceIDsRequest) returns (GetSourceIDsResponse) {};
  rpc UpdateSource(UpdateSourceRequest) returns (Source) {};
  rpc DeleteSource(DeleteSourceRequest) returns (google.protobuf.Empty) {};
  rpc ListSources(ListSourcesRequest) returns(ListSourcesResponse) {};
  rpc ListSourcesByDomain(ListSourcesByDomainRequest) returns (ListSourcesResponse) {};

  rpc GetPermittedUsers(GetResourcePermissionsRequest) returns (PermittedUsers) {};
  rpc UpdatePermittedUsers(PermittedUsers) returns (PermittedUsers) {};
  rpc GetPermittedRoles(GetResourcePermissionsRequest) returns (PermittedRoles) {};
  rpc UpdatePermittedRoles(PermittedRoles) returns (PermittedRoles) {};
};